css/style.css
/* ... */
#get_app .app_store_button a .p_2 {
  font-size: 16px;
  font-weight: 400;
  font-family: var(--inter);
}

#get_app .app_store_button i {
  color: var(--brand_color);
  font-size: 24px;
  margin: 10px;
  transition: all linear .3s;
}

#get_app .app_store_button a:hover {
  box-shadow: 0 10px 15px -3px #488aec4f, 0 4px 6px -2px #488aec17;
}

#get_app .app_store_button a :focus,
button:active {
  opacity: .85;
  box-shadow: none;
}

.app_image {
  width: 373px;
  margin: 0 auto;
  margin-right: 0;
  margin-top: 79px;
}

/* ---------- get app now css part end ---------- */
/* ========== counter css part start ==========  */
#counter_part {
  background: url('/images/counter\ image.png');
  padding: 135px 0;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  z-index: 1;
}

#counter_part::after {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: rgba(255, 153, 0, 0.904);
  z-index: -1;
}

.counter_item {
  text-align: center;
}

.counter_text h3 {
  font-size: 40px;
  font-weight: 700;
  font-family: var(--poppins);
  color: #ffffff;
  margin-top: 7px;
}
.counter_image{
  width: 82px;
  margin: 0 auto;
}
.counter_text p {
  font-size: 18px;
  font-weight: 600;
  font-family: var(--poppins);
  color: #ffffff;
}

/* ---------- countercss part end ---------- */
/* ========== video css part start ==========  */
.video-titleAnd-description {
  text-align: center;
  margin: 0px auto;
  padding-top: 115px;
  padding-bottom: 30px;
}

.video-titleAnd-description h2 {
  font-size: 30px;
  font-weight: 600;
  font-family: var(--poppins);
  color: var(--heading_color);
  padding-bottom: 15px;
}

.video-titleAnd-description p {
  width: 490px;
  font-size: 18px;
  font-weight: 400;
  font-family: var(--inter);
  color: var(--paragraph_color);
  margin: 0 auto;
}

.video-row {
  display: flex;
  justify-content: center;
  align-items: center;
}

.video {
  position: relative;
}

.video iframe {
  width: 960px;
  height: 500px;
  border-radius: 10px;
  text-align: center;
  margin: 0px auto;
}

.video .thumbnail {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0%;
  left: 0%;
}

.thumbnail::after {
  content: '';
  width: 100%;
  height: 100%;
  background: rgba(31, 0, 230, 0.50);
  position: absolute;
  top: 0%;
  left: 0%;
  border-radius: 10px;
  margin: 0px auto;
}

.thumbnail img {
  width: 100%;
  height: 100%;
  border-radius: 10px;
}

.playButton {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 70px;
  height: 70px;
  background-color: #FF9900;
  color: #ffffff;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all linear.3s;
  animation: animate 2s linear infinite;
}

.playButton:hover {
  background: #ffffff;
  color: #5940ff;
}

@keyframes animate {
  0% {
    box-shadow: 0 0 0 0 rgba(255, 193, 7, 0.7);
  }

  40% {
    box-shadow: 0 0 0 40px rgba(255, 193, 7, 0);
  }

  80% {
    box-shadow: 0 0 0 40px rgb(255, 193, 7, 0);
  }

  100% {
    box-shadow: 0 0 0 40px rgb(255, 193, 7, 0);
  }
}

/* ---------- video css part end ---------- */
/* ========== testimonial part start ==========  */
#testimonial {
  padding-top: 116px;
  padding-bottom: 151px;
}

.testimonial_head h2 {
  font-size: 30px;
  font-weight: 600;
  font-family: var(--poppins);
  color: var(--heading_color);
  text-align: center;
  margin-bottom: 49px;
}

.testimonial_image {
  width: 71px;
  height: 71px;
  margin: 0 auto;
  margin-bottom: 20px;
}

.testimonial_image img {
  border: 2px solid var(--brand_color);
  border-radius: 50%;
}

.testimonial_text p {
  width: 520px;
  font-size: 16px;
  font-weight: 400;
  font-family: var(--inter);
  color: var(--paragraph_color);
  line-height: 25px;
  text-align: center;
  margin: 0 auto;
}

.testimonial_review ul {
  display: flex;
  justify-content: center;
  gap: 9px;
}

.testimonial_review ul li a {
  color: var(--secondary_color);
}

.testimonial_review ul li .nb_color {
  color: #98999C;
}

.personename_country h3 {
  width: 141px;
  font-size: 18px;
  font-weight: 500;
  font-family: var(--poppins);
  color: var(--heading_color);
  margin: 0 auto;
  margin-top: 13px;
  margin-bottom: 4px;
}

.personename_country h4 {
  font-size: 16px;
  font-weight: 500;
  font-family: var(--inter);
  color: var(--brand_color);
  text-align: center;
}

.testimonial_slide {
  width: 100%;
  position: relative;
  z-index: 999;
}

.next_arrrow {
  width: 14px;
  height: 22px;
  color: #D5D5D5;
  position: absolute;
  top: 95%;
  right: 0;
  transform: translate(-50% -50%);
  visibility: hidden;
  transition: all linear .5s;
  opacity: 0%;
}

.testimonial_slide:hover .next_arrrow {
  top: 50%;
  right: 0;
  transform: translate(-50% -50%);
  visibility: visible;
  transform: rotate(360deg);
  opacity: 100%;
}

.pree_arrow {
  width: 14px;
  height: 22px;
  color: #D5D5D5;
  position: absolute;
  z-index: 1;
  top: 95%;
  left: 0;
  transform: translate(-50% -50%);
  visibility: hidden;
  transition: all linear .5s;
  opacity: 0%;
}

.testimonial_slide:hover .pree_arrow {
  top: 50%;
  right: 0;
  transform: translate(-50% -50%);
  visibility: visible;
  transform: rotate(360deg);
  opacity: 100%;
}

.testimonial_slide ul {
  margin-top: 38px;
  display: flex;
  gap: 12px;
  justify-content: center;
}

.testimonial_slide ul li button {
  font-size: 0px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  border: none;
  background-color: #D9D9D9;
}

.testimonial_slide .slick-active button {
  width: 13px;
  height: 13px;
  background-color: var(--secondary_color);
}

/* ---------- testimonial part end ---------- */
/* ========== contact part start ==========  */
#contact_us {
  padding-bottom: 116px;
}

#contact_us .row {
  display: flex;
  align-items: center;
}

.contact_mainhead {
  width: 100%;
  margin-top: 0 auto;
}
/* ... */

